fix(table-head): stickyheader z-index 2

--- a/src/components/reusable/table/table-head.scss
+++ b/src/components/reusable/table/table-head.scss
@@ -7,6 +7,6 @@
 :host([stickyheader]) {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: white;
 }
